--- a/PyCitySchools/PyCitySchools.ipynb
+++ b/PyCitySchools/PyCitySchools.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +108,7 @@
        "4          4    Griffin High School   Charter  1468   917500"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -235,7 +235,7 @@
        "4             97          84  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -376,15 +376,68 @@
        "4         Bonnie Ray      F   9th             97          84  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Combine the data into a single dataset.  \n",
-    "PyCitySchool_data = pd.merge(df1, df2, how=\"left\", on= \"school_name\")\n",
-    "PyCitySchool_data.head()"
+    "PyCitySchool_df = pd.merge(df1, df2, how=\"left\", on= \"school_name\")\n",
+    "PyCitySchool_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## District Summary"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "15"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Calculate total number of schools\n",
+    "Total_Schools = len(PyCitySchool_df[\"school_name\"].unique())\n",
+    "Total_Schools"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "39170"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Calculate total number of students\n",
+    "Total_Students = PyCitySchool_df.loc[:, (\"student_name\")]\n",
+    "Total_Students.count()"
    ]
   },
   {
@@ -395,7 +448,7 @@
     {
      "data": {
       "text/plain": [
-       "39170"
+       "24649428"
       ]
      },
      "execution_count": 10,
@@ -404,33 +457,128 @@
     }
    ],
    "source": [
-    "#Calculate total number of schools\n",
-    "TotalSchools = PyCitySchool_data.loc[:, (\"school_name\")]\n",
-    "TotalSchools.count()"
+    "#Calculate total budget\n",
+    "TotalBudget = (PyCitySchool_df[\"budget\"].unique()).sum()\n",
+    "TotalBudget"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "78.98537145774827"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Calculate the average math score \n",
+    "Avg_MathScore = PyCitySchool_df[\"math_score\"].mean()\n",
+    "Avg_MathScore"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "81.87784018381414"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Calculate the average reading score \n",
+    "Avg_ReadingScore = PyCitySchool_df[\"reading_score\"].mean()\n",
+    "Avg_ReadingScore"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "74.9808526933878"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Calculate the percentage of students with a passing math score (70 or greater)\n",
+    "PassingMath = PyCitySchool_df.loc[PyCitySchool_df[\"math_score\"] >= 70][\"student_name\"].count()\n",
+    "Percent_PassingMath = PassingMath/Total_Students.count()\n",
+    "Percent_PassingMath*100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "85.80546336482001"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Calculate the percentage of students with a passing reading score (70 or greater)\n",
+    "PassingReading = PyCitySchool_df[PyCitySchool_df[\"reading_score\"] >= 70][\"student_name\"].count()\n",
+    "Percent_PassingReading = PassingReading/Total_Students.count()\n",
+    "Percent_PassingReading*100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "65.17232575950983"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Calculate the percentage of students who passed math **and** reading (% Overall Passing)\n",
+    "PassingBoth = PyCitySchool_df[(PyCitySchool_df[\"math_score\"] >= 70) & (PyCitySchool_df[\"reading_score\"] >= 70)][\"student_name\"].count()\n",
+    "Percent_OverallPassing = PassingBoth/Total_Students.count()\n",
+    "Percent_OverallPassing*100"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## District Summary\n",
-    "\n",
-    "* Calculate the total number of schools\n",
-    "\n",
-    "* Calculate the total number of students\n",
-    "\n",
-    "* Calculate the total budget\n",
-    "\n",
-    "* Calculate the average math score \n",
-    "\n",
-    "* Calculate the average reading score\n",
-    "\n",
-    "* Calculate the percentage of students with a passing math score (70 or greater)\n",
-    "\n",
-    "* Calculate the percentage of students with a passing reading score (70 or greater)\n",
-    "\n",
-    "* Calculate the percentage of students who passed math **and** reading (% Overall Passing)\n",
-    "\n",
     "* Create a dataframe to hold the above results\n",
     "\n",
     "* Optional: give the displayed data cleaner formatting"
